# ChangeLog for dev-python/python-ulid
# Copyright 1999-2025 Gentoo Foundation; Distributed under the GPL v2
# (auto-generated from git log)

*python-ulid-3.1.0 (11 Dec 2025)

  11 Dec 2025; Xavier FORESTIER <{ID}+{username}@users.noreply.github.com>
  +metadata.xml, +python-ulid-3.1.0.ebuild:
  app-misc/homeassistant 2025-12.0
