@@ -1,4 +1,4 @@
 DIST libpyfoscamcgi-0.0.9.tar.gz 20058 BLAKE2B ceaf6df68e0a8356a8f9fbce2128d08a99e0c2ecbe934b13b0695182c59c3a8b99f501cf72996485fb75a5d897288ae3adca658016dd980dc51ef98828a705a3 SHA512 972f2c902e2ec7906c78c975195e89e58eca1c7ee3c2919924b60a045fa7b9b8dace1f39e91dd91978ee9464a7eac4160dc8bb71c5889065b8b3fab5c50f22ad
-EBUILD libpyfoscamcgi-0.0.9.ebuild 523 BLAKE2B de6a0bf40694efad892bff2d5fdd6ff792513e5c0c1318fea25179b4e08a14ef2c0856de0e8d6c62865755569009a17477a1dc3fa3802a2f2f108d12b4d7100b SHA512 663c56ad7157ba43b122d3f42da1d4028507505e4f7569642f3ddba3ecf1cea2e6ea9e7c0ffbe1713619de2e0a27a3fbfeaa11538158844574575c293aa4e550
+EBUILD libpyfoscamcgi-0.0.9.ebuild 523 BLAKE2B 7eee37452dd9c34f3ab5c2cec4e1c41311356e1555d99a21d46117efc913f53470a8ba00b9c41988ecad0105d93df24eb1eba6e0491973dd0f22ced5c57c19a9 SHA512 905192987c47b7186def8c023fc1b98031b575f54ee98e256ba516f3839884c3c149c414922c876fb9979165e16f931976bf206f69b04d04b34a9bda1a784637
 MISC ChangeLog 999 BLAKE2B c7abcd3856ae7eece8dd291f736ee771b860f91c35a5a086f6b8018f852bfa686f3658e4910a1a5633cc7266d4fd548a9facafc36823971985bf1a00ad557496 SHA512 1652a10a3591953d9aae4c5be12bfb79e49ec455dfdd93762748f2c3549fb6e6b1817d2daa3a7d1977c1c64bb737e36c0e54be1d63d8cc6fc1c12ae1bf8f158f
 MISC metadata.xml 294 BLAKE2B d9d3b89e39dc134655b46018ede0e52fffcdefb9c66d4ce796e42e6759bb0f0e2afef2a91ba7cc5ccfa3fc8e5bf3a3faacafee7675e1eaf91940282db51cb70b SHA512 47af08db5b161da0153f93a88c479828af205917af65938c792ba795aa8a6a16b60aca52c37ad17d543f8ab8cd8818a0853967f657bfc367456073470724f523
