@@ -1,4 +1,4 @@
 DIST py_nextbusnext-2.3.0.tar.gz 5304 BLAKE2B 81401c77a69f86ff0a06c22c6f7ef6594147907fb950c3920a214003277540af4e807447669c13a8e516d4650746853e6a6f29cd550d18d6696638a1c2e2cc82 SHA512 14fe389371ae703ea611855d3c6a0e78dea4a1c0fe50f22dd470a84de6d078de56d9a4810d356b70c0101ca1ca375863acc3e2d5f19b625d687fd4d98859ddd0
-EBUILD py-nextbusnext-2.3.0.ebuild 510 BLAKE2B fab0a827be81b6585094491d0527c969d28b135f510024b9a330b35312bdfe5d30b921d78820c6ad519b4f484a5cd57101b0595ec8c524daccb5ea25fba213b3 SHA512 c9bcab62d9bf98c1a148633ac9ef401fc580902694657aa9de124b90fc92038217cd55144ff98172a1da4d0dd4bd5506d9c21b70432ee9979da2eb2ae95b892d
+EBUILD py-nextbusnext-2.3.0.ebuild 509 BLAKE2B 3e00f465b1166816d40e4a5801beb2d7ccc82f6110e25f4e71501d51d7e08334598a746bf0da8c058575953ddc67f7395b22323d897b17ff5fa229b22b6d944c SHA512 5ae97e641ac741b22e33179c2d8a3288b87d9f9c70290f804e3d2f575cf3e98f258db9f0d32bb20d5be47d32df0ec8af2a0746804a06f7e8c56a49b7cfe4dc47
 MISC ChangeLog 4962 BLAKE2B 16fb7fff852ddaf1f1fd3187823a5f9111f15cdc5c8227c8491b03b4ec4144101c55dcb8d4d77dbc487a607186df65829643eaeb45db9b6004b58978530a4361 SHA512 ac6d70e6c689003e127ec66bd8df8af071c6c429f1a57482db26b90b298da8f57d04237ff8c332e1abfda438739fbdfc5dfe2f70992df04c227a87153e75d131
 MISC metadata.xml 398 BLAKE2B fceb8189fe69802679f4c698a9f398446941eb652d940d30b6eba16559f15cb0e55bec8b771ecf26c3882f628cf53e68f3a142a6e1aa66c4cd9a0ee39caf58fb SHA512 285d2d18d442e87c8f7b63ed67548edeeb61274788986e567e505f8c3500d5ebb0cd03259cc8f8d39498ac19aeec8f6e4c66c94782b81d91dab0431e5b935bbf
