@@ -1,4 +1,4 @@
 DIST python_ulid-3.1.0.tar.gz 93175 BLAKE2B 7858084fa85f470d56cb28489f57406384d0efd0a878c05c004dcdbf9e33dd8737d0a633e31029547b038be03053d243926b9656a53a596d2aa26716e4ee829a SHA512 f21fc70133a839934e9b3f4b2ec756a5a68440cdeedd4aacbf60e93843c845d5600f1c9368178cd37226a80fa08ddb2239a29fbd04c916ff64f29a811dc71943
 EBUILD python-ulid-3.1.0.ebuild 689 BLAKE2B 177802532703b585207ff36ef3a16f350e8880acd01857961d9af600f2a2b99f1a5f9ad9f0bcc3a3258cafc37beab44c3d7a71abf3e92d2b655c30c173a1c50b SHA512 03b2d5652bd4d0e693a7732b9b5a344bc5939b79e9ae6653f84f3940b918e504698a2666b1f7d5eb3b8513e667fafdedab7cd8d3a5e8a9a7b50a9912ce14cea2
-MISC ChangeLog 331 BLAKE2B 72796969c10efe848808ff5a433ab480c4544e48c783880d25b8a45d86009551ea14209d14f760c4cf3c277fe2253338dc9af72ca53e6266e15d3a6239c4a218 SHA512 5f1d47655d94c075a70a324e48d2b9b16ab420200869839272b2e59b38db7313052f6fca78804663cfb6d81d704e659477ff7e1cf5f3d6f6e0792f9b57e55777
+MISC ChangeLog 577 BLAKE2B bc4a8137245f9d831f6db308dd183be8b77111b1cd37373015ddea6ae887dbd9617de13926dc64b6fc13a8503686b912533f57d76ecaacdcd490f8a100bd2d77 SHA512 18437ac261f936b832ee1e7fdd2d5488aa3a95b795dc7c464fd24d3c8f7c27d832ad9cdc256f9436002cda4770f04f991566c1ef51d1ce3af446f36565fad8b7
 MISC metadata.xml 278 BLAKE2B 0eea56deeb1611206abf19bedbd0e578b476157f8006b7c5cdf324d900993e729c5352c1b50ddd05f6934eb1502ae97d2f07b78fc986e32f250c4ae4c2f3b99e SHA512 a54590acae90957d31ddf0b730d059eddf3fc4142571a233708b713a84f0f6017ad4d1e46b02c47b05ce6ae86f9e9295cfd02dae881290268fd622baec5690b2
