@@ -31,6 +31,6 @@ DIST target-lexicon-0.13.3.crate 28498 BLAKE2B 397315667737abde41949081f8377f704
 DIST tiktoken-0.12.0.tar.gz 37806 BLAKE2B 9cb14dd95205c347525dca92b64fc98e74a5ce8eb047346799bfddd99678c201c4bb4930687556bb0e03cab2d59e3626186391dec178da6b5574fcfa3c9c1161 SHA512 5439d8a109446303255bb3c4cfb51fb77a3137b9ea96b467665de11d48e26ef6eb774c9e3a2307dc870f332a67a8eb88966320cfff3ec0f6754081ff2e22831d
 DIST unicode-ident-1.0.22.crate 47919 BLAKE2B 766f52249631092af952df717e09e1eb0d2a8e87c45e65113f0b2b88b42e8b406a87241fadd368ceb9e13339362b48cdbbc6f699f95f448ab45dbbd861615d62 SHA512 81666679aaa2eebfe1429827fa2a88ee0b52bd69723067132c24252070133b3731287bcd880ba16d16274f038c7b27bcf637e9150b6cd955fb4ff49642078125
 DIST unindent-0.2.4.crate 7422 BLAKE2B 2e7870cd4f78240dbb1e5fb9c0f9b55c57bb40242fe668f105a0e862f1d6300e31efbffe0cdff676a5f96a8d19dfb148f88bfef1cd8a710556d777fd0f4ee37f SHA512 58bd4fd20a0b0a7200e0ea3ea70553cea135a5a8f7a2fb178520c41228f435becce4b9981019b7c73a17df87a2ee9b2a47c4cec29a3011bfe848d48b2473761b
-EBUILD tiktoken-0.12.0.ebuild 1628 BLAKE2B 5a9c74c35fec662691b962b5678b7b8d1cde0a887e17b77b2425d48013f61f775cf61f2323ea0b8a3b1d4945151eaf804b6a256a6ba8121dce03375dc7ae0f65 SHA512 73b86c990d7d65dc2f3515b23c0419ceb1a3fa31b10f4ef97f7422fb5130120e381eebc9b0bb0f99a062e32d6200e683220e1db4ac33423d71c5030e419c83f6
-MISC ChangeLog 437 BLAKE2B 89fb20683b84d4fbdf1124765e742150c210a3d7f9d7e45b25d45a187f5e7053d029470f0ceecef563649ae1ca84096f9213fb9b3cda1e6ab71d9c484dcc1fc0 SHA512 484b89ad6dda3a952f14f4bb937feb5a6ac13e9382810309a550e0fd3bfd5d30e95ae719978c49f5ff60acce84532710d4ba55586384b97fcde2c37ca1246b63
+EBUILD tiktoken-0.12.0.ebuild 1618 BLAKE2B 657c212c28f851fe30801012c8b30f4a908d1110ee86825253474b5233b8611c1b9251836bc3b24d146bbcb0de17c9ede08cb7b0a0187b5cdc65a6f16d56dc1f SHA512 7f61ded09c344d8eb4a4f7841c35905f9d63c27f5ad005b5b46b88f8e1dcec1365467243a9321c9805b4a0631db2b5b38b41aa60884ed1dfdffe047abcc4a868
+MISC ChangeLog 558 BLAKE2B 14a1144ea48a80833127b701857a022bd0b935b453e8a4ef5a62fb493841c901be0eb873da05301ef93848b367b4b0c49c6ad088919faa924fadbefb9c32149a SHA512 b7365bd0f74fa3dacabe0ba68c6c8150e0d6c6bd97dba56f69c305953658b4f9d3e7e10377575e872b8903918e56814c0c7c1f70550f009a684940166764bee4
 MISC metadata.xml 272 BLAKE2B 2fd2e0f7871152eceb10a26fb63086dedbc06c2cead4b47a20d9e05e2c3414425c2510d48d79538c20da4ec5ccf7434845edcea8cde4e6c333a96fd03a9038d4 SHA512 abeb022d172821ee41a11f9ee4311eea7120c32a9952c53b8effa406d6010adf0bacfc1ee7d8fe1f81354557fe279550a46866185a8dad016fb78494c6d745c9
