@@ -2,6 +2,10 @@
 # Copyright 1999-2025 Gentoo Foundation; Distributed under the GPL v2
 # (auto-generated from git log)
 
+  14 Dec 2025; Xavier FORESTIER <{ID}+{username}@users.noreply.github.com>
+  tiktoken-0.12.0.ebuild:
+  Update changelog
+
   13 Dec 2025; Xavier FORESTIER <{ID}+{username}@users.noreply.github.com>
   tiktoken-0.12.0.ebuild:
   fix deps
