@@ -2,6 +2,14 @@
 # Copyright 1999-2025 Gentoo Foundation; Distributed under the GPL v2
 # (auto-generated from git log)
 
+  14 Dec 2025; Xavier FORESTIER <{ID}+{username}@users.noreply.github.com>
+  python-ulid-3.1.0.ebuild:
+  Update changelog
+
+  14 Dec 2025; Xavier FORESTIER <{ID}+{username}@users.noreply.github.com>
+  python-ulid-3.1.0.ebuild:
+  Update changelog
+
 *python-ulid-3.1.0 (11 Dec 2025)
 
   11 Dec 2025; Xavier FORESTIER <{ID}+{username}@users.noreply.github.com>
